[package]
name = "eth-narwhal-node"
version = "0.1.0"
edition = "2021"
authors = ["Gokul Alex <gokulalex@example.com>"]
description = "Ethereum-compatible node with Narwhal-Bullshark consensus, REVM execution, PQ cryptography, and cross-chain bridges to Solana, Sui, and Aptos."
license = "Apache-2.0"
repository = "https://github.com/your-repo/eth-narwhal-node"

[dependencies]
# Async + utilities
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
sha2 = "0.10"
bincode = "1.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Blockchain / EVM execution
revm = "3.5.0"

# Networking & P2P
libp2p = { version = "0.49", features = ["tcp-tokio", "gossipsub", "noise", "yamux", "dns"] }

# Database
rocksdb = "0.21.0"

# JSON-RPC server
jsonrpsee = { version = "0.15.1", features = ["macros", "http-server"] }

# Post-Quantum Cryptography
pqcrypto-mldsa = "0.1"
pqcrypto-traits = "0.3.5"

# HTTP client (for bridge communication)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

